Calling buttons by their id

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 
     <div class="game">
-        <div class="grid-item"><button>1</button></div>
-        <div class="grid-item"><button>2</button></div>
-        <div class="grid-item"><button>3</button></div>  
-        <div class="grid-item"><button>4</button></div>
-        <div class="grid-item"><button>5</button></div>
-        <div class="grid-item"><button>6</button></div>  
-        <div class="grid-item"><button>7</button></div>
-        <div class="grid-item"><button>8</button></div>
-        <div class="grid-item"><button>9</button></div>  
-      </div>
-      <script src="./dist/script.js"></script>
+        <div class="grid-item"><button id="matris0-0" class="cell-button">1</button></div>
+        <div class="grid-item"><button id="matris0-1" class="cell-button">2</button></div>
+        <div class="grid-item"><button id="matris0-2" class="cell-button">3</button></div>
+        <div class="grid-item"><button id="matris1-0" class="cell-button">4</button></div>
+        <div class="grid-item"><button id="matris1-1" class="cell-button">5</button></div>
+        <div class="grid-item"><button id="matris1-2" class="cell-button">6</button></div>
+        <div class="grid-item"><button id="matris2-0" class="cell-button">7</button></div>
+        <div class="grid-item"><button id="matris2-1" class="cell-button">8</button></div>
+        <div class="grid-item"><button id="matris2-2" class="cell-button">9</button></div>
+    </div>
+    <script src="./dist/script.js"></script>
 </body>
 
 </html>
