--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- FUENTES DE GOOGLE -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Asap:ital,wght@0,100..900;1,100..900&family=Bebas+Neue&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
+
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -13,10 +24,10 @@
 
 
     <div class="game">
-        <div class="grid-item"><button id="matris0-0" class="cell-button">1</button></div>
-        <div class="grid-item"><button id="matris0-1" class="cell-button">2</button></div>
-        <div class="grid-item"><button id="matris0-2" class="cell-button">3</button></div>
-        <div class="grid-item"><button id="matris1-0" class="cell-button">4</button></div>
+        <div class="grid-item"><button id="matris0,0" class="cell-button">1</button></div>
+        <div class="grid-item"><button id="matris0,1" class="cell-button">2</button></div>
+        <div class="grid-item"><button id="matris0,2" class="cell-button">3</button></div>
+        <div class="grid-item"><button id="matris1,0" class="cell-button">4</button></div>
         <div class="grid-item"><button id="matris1-1" class="cell-button">5</button></div>
         <div class="grid-item"><button id="matris1-2" class="cell-button">6</button></div>
         <div class="grid-item"><button id="matris2-0" class="cell-button">7</button></div>
@@ -24,6 +35,12 @@
         <div class="grid-item"><button id="matris2-2" class="cell-button">9</button></div>
     </div>
     <script src="./dist/script.js"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
