--- a/index.html
+++ b/index.html
@@ -23,25 +23,68 @@
 
 <body>
     <nav>
-
         <h1>index</h1>
     </nav>
     <main>
-        main
+    
+
+
     </main>
-<!-- BOTON MODO 1 -->
-    <a href="./src/pages/machine-human.html"> <button class="option-selector" onmouseover="backgrounChanger()"
-            onmouseout="normalBackground()" id="machine-human">Machine vs human</button> </a>
-<!-- BOTON MODO 2 -->
-    <a href="./src/pages/machine-machine.html"> <button class="option-selector" onmouseover="backgrounChanger2()"
-            onmouseout="normalBackground()" id="human-human">human vs human</button> </a>
 
 
 
+<!-- 
+
+<div class="contenido">
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore enim porro repellendus doloremque fugiat quasi ipsam hic unde voluptas officiis adipisci voluptatibus exercitationem incidunt voluptatem deleniti omnis, velit ducimus consectetur?
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem maiores corporis aut distinctio architecto. Fuga perspiciatis obcaecati doloremque voluptatem quo, maiores delectus similique, incidunt accusantium quos corporis itaque quibusdam praesentium!
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis delectus similique cupiditate natus in quisquam expedita id nesciunt ratione illo quas animi, sint, rem nisi, accusamus dolorem perspiciatis odio unde!Lorem
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
+</div>
+ -->
 
 
 
-
+<footer>
+    <h2>FOOTER</h2>
+</footer>
 
 
     <!-- <script src="./dist/script.js"></script> -->
