--- a/src/pages/human-human.html
+++ b/src/pages/human-human.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/src/styles/machine-human.css">
+    <link rel="stylesheet" href="/src/styles/human-human.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         <div><button class="cellButton" id="matris2-2"></button></div>
     </div>
 
-    <script src="/dist/machine-human.js"></script>
+    <script src="/dist/human-human.js"></script>
 
 </body>
 
