--- a/index.html
+++ b/index.html
@@ -2,98 +2,36 @@
 <html lang="en">
 
 <head>
-    <!-- BOOSTRAP -->
-    <!-- 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-
-    <!-- FUENTES DE GOOGLE -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Anton&family=Asap:ital,wght@0,100..900;1,100..900&family=Bebas+Neue&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-
-    <link rel="stylesheet" href="./src/styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <link rel="stylesheet" href="./src/styles/index.css">
 </head>
 
 <body>
-    <nav>
-        <h1>index</h1>
-    </nav>
-    <main>
-    
 
+    <header>
+        <h1>TITTLE</h1>
+    </header>
+    <main>
+        <label for="html">Who you are</label><br>
+        <input id="price" placeholder="Character´s name" type="text">
+        <button id="enjoy-button">Enjoy</button>
 
     </main>
+    <section>
+        <h2> YOU DISCOVER YOUR POTENTIAL <br> AND FIGHT AGAINST THE UNKNOWN</h2>
+    </section>
+
+
+    <!-- <main>
+        <h3>this is a  main</h3>
+    </main> -->
 
 
 
-<!-- 
-
-<div class="contenido">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore enim porro repellendus doloremque fugiat quasi ipsam hic unde voluptas officiis adipisci voluptatibus exercitationem incidunt voluptatem deleniti omnis, velit ducimus consectetur?
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem maiores corporis aut distinctio architecto. Fuga perspiciatis obcaecati doloremque voluptatem quo, maiores delectus similique, incidunt accusantium quos corporis itaque quibusdam praesentium!
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis delectus similique cupiditate natus in quisquam expedita id nesciunt ratione illo quas animi, sint, rem nisi, accusamus dolorem perspiciatis odio unde!Lorem
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, doloremque id voluptatum vero, molestiae doloribus dicta, odit ullam cupiditate hic rerum. Molestiae architecto perspiciatis, vitae odit dolor suscipit accusantium assumenda?
-</div>
- -->
-
-
-
-<footer>
-    <h2>FOOTER</h2>
-</footer>
-
-
-    <!-- <script src="./dist/script.js"></script> -->
-    <script src="/dist/script.js"></script>
-
-    <!-- BOOSTRAP -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script> -->
+    <!-- SCRIPT TS -->
+    <script src="./dist/index.js"></script>
 </body>
 
 </html>
