--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="/src/styles/machine-machine.css">
+    <link rel="stylesheet" href="/src/styles/human-machine.css">
     <title>Document</title>
 </head>
+
 <body>
-    
-<h1>game machine vs machine</h1>
+
+    <h1>game machine vs machine</h1>
 
 
-<script src="/src/ts/machine-machine.js"></script>
+    <script src="/dist/human-machine.js"></script>
 </body>
+
 </html>
