--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html lang="en">
 
 <head>
+    <!-- ROBOTO GOOGLE FONT  -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet"> -->
+    <!-- STRANGER THINGS FONT -->
+    <link href="https://fonts.cdnfonts.com/css/stranger-things" rel="stylesheet">
+
+    <!-- POPPINS GOOGLE FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -11,7 +26,7 @@
 <body>
 
     <header>
-        <h1>TITTLE</h1>
+        <h1>TITTLE PAGE</h1>
     </header>
     <main>
         <label for="html">Who you are</label><br>
@@ -20,7 +35,8 @@
 
     </main>
     <section>
-        <h2> YOU DISCOVER YOUR POTENTIAL <br> AND FIGHT AGAINST THE UNKNOWN</h2>
+
+        <h2> YOU DISCOVER YOUR POTENTIAL <br> WHILE FIGHTING THE UNKNOWN</h2>
     </section>
 
 
