--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <label for="html">Who you are</label><br>
-        <input id="price" placeholder="Character´s name" type="text">
+        <input id="character-name" placeholder="Character´s name" type="text">
         <button id="enjoy-button">Enjoy</button>
 
     </main>
