--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <header>
-        <h1>TITTLE PAGE</h1>
+        <h1>TITTLE PAGE X O</h1>
     </header>
     <main>
         <label for="html">Who you are</label><br>
