--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <header>
         <h1>TITTLE PAGE</h1>
     </header>
-    <main >
+    <main>
         <label for="html">Who you are</label><br>
-        <input id="character-name" placeholder="Character´s name" type="text">
-        <button  id="enjoy-button">Enjoy</button>
-        
+        <input id="character-name" placeholder="Character´s name" type="text" required>
+        <button id="enjoy-button">Enjoy</button>
+
     </main>
     <section>
 
