--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <label for="html">Who you are</label><br>
         <input id="character-name" placeholder="Character´s name" type="text" required>
         <button id="enjoy-button">Enjoy</button>
+        <!-- <audio id="mystical" onmouseover="playFuntion(mystical)" src="./src/sounds/mystical.mp3"></audio> -->
 
     </main>
     <section>
