--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <body>
 
     <header>
-        <h1>TITTLE PAGE</h1>
+        <h1>Gato y el ratón.</h1>
     </header>
-    <main >
+    <main>
         <label for="html">Who you are</label><br>
         <input id="character-name" placeholder="Character´s name" type="text">
-        <button  id="enjoy-button">Enjoy</button>
-        
+        <button  onmouseover="playFuntion(mystical)" id="enjoy-button">Enjoy</button>
+        <audio id="mystical" src="/src/sounds/mystical.mp3"></audio>
     </main>
     <section>
 
