--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+
+<head>
 
 
-  
-  <!-- STRANGER THINGS FONT -->
-  <link href="https://fonts.cdnfonts.com/css/stranger-things" rel="stylesheet">
 
-  <!-- POPPINS GOOGLE FONT -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./src/styles/index.css">
+    <!-- STRANGER THINGS FONT -->
+    <link href="https://fonts.cdnfonts.com/css/stranger-things" rel="stylesheet">
+
+    <!-- POPPINS GOOGLE FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/src/styles/index.css">
 </head>
 
 <body>
 
-  <header>
-      <h1>Tittle page</h1>
-  </header>
-  <main>
-  <main>
-      <button>hola</button>
-      <label for="html">Who you are</label><br>
-      <input id="character-name" placeholder="Character´s name" type="text">
-      <button  onmouseover="playFuntion(mystical)" id="enjoy-button">Enjoy</button>
-      <audio id="mystical" src="/src/sounds/mystical.mp3"></audio>
+    <header>
+        <h1>Tittle page</h1>
+    </header>
+    
+        <main>
 
-  </main>
-  <section>
+            <label for="html">Who you are</label><br>
 
-      <h2> YOU DISCOVER YOUR POTENTIAL <br> WHILE FIGHTING THE UNKNOWN</h2>
-  </section>
+            <input id="character-name" placeholder="Character´s name" type="text">
+            <button onmouseover="playFuntion(mystical)" id="enjoy-button">Enjoy</button>
+            <audio id="mystical" src="/src/sounds/mystical.mp3"></audio>
+
+        </main>
+        <section>
+
+            <h2> YOU DISCOVER YOUR POTENTIAL <br> WHILE FIGHTING THE UNKNOWN</h2>
+        </section>
 
 
 
-  <!-- SCRIPT TS -->
-  <script src="./dist/index.js"></script>
+        <!-- SCRIPT TS -->
+        <script src="./dist/index.js"></script>
+
 </html>
