--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/src/styles/index.css">
+    <!-- <link rel="stylesheet" href="/src/styles/index.css"> -->
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
             <label for="html">Who you are</label><br>
 
-            <input id="character-name" placeholder="Character´s name" type="text">
+            <input id="character-name" placeholder="Character´s name" type="text" required>
             <button onmouseover="playFuntion(mystical)" id="enjoy-button">Enjoy</button>
             <audio id="mystical" src="/src/sounds/mystical.mp3"></audio>
 
