--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -16,7 +16,7 @@
     <div class="div-container">
         <!-- class="cellButton" -->
         <div><button class="cellButton" id="matris0,0"></button></div>
-        <div><button class="cellButton" id="matris0,1"></button>o</div>
+        <div><button class="cellButton" id="matris0,1"></button></div>
         <div><button class="cellButton" id="matris0,2"></button></div>
         <div><button class="cellButton" id="matris1,0"></button></div>
         <div><button class="cellButton" id="matris1-1"></button></div>
