--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
+    <header id="header">
+        <!-- <h1>game machine vs machine</h1> -->
+    </header>
 
-    <h1>game machine vs machine</h1>
 
-    
     <div class="div-container">
         <!-- class="cellButton" -->
         <div><button class="cellButton" id="matris0,0"></button></div>
@@ -32,4 +33,3 @@
 </body>
 
 </html>
-
