Adding styles again

--- a/src/pages/human-human.html
+++ b/src/pages/human-human.html
@@ -10,24 +10,21 @@
 
 <body>
 
-    <h1>Game machine vs human</h1>
+    <h1 id="demo">Demo</h1>
 
 
-
-    <h1>TIC-TAC-TOE</h1>
-    <h2>Hola</h2>
 
     <div class="game">
         <!-- class="cellButton" -->
-        <div><button class="cellButton" id="matris0,0"></button></div>
-        <div><button class="cellButton" id="matris0,1"></button></div>
-        <div><button class="cellButton" id="matris0,2"></button></div>
-        <div><button class="cellButton" id="matris1,0"></button></div>
-        <div><button class="cellButton" id="matris1-1"></button></div>
-        <div><button class="cellButton" id="matris1-2"></button></div>
-        <div><button class="cellButton" id="matris2-0"></button></div>
-        <div><button class="cellButton" id="matris2-1"></button></div>
-        <div><button class="cellButton" id="matris2-2"></button></div>
+        <div><button class="demoButtons" id="matris0,0"></button></div>
+        <div><button class="demoButtons" id="matris0,1"></button></div>
+        <div><button class="demoButtons" id="matris0,2"></button></div>
+        <div><button class="demoButtons" id="matris1,0"></button></div>
+        <div><button class="demoButtons" id="matris1-1"></button></div>
+        <div><button class="demoButtons" id="matris1-2"></button></div>
+        <div><button class="demoButtons" id="matris2-0"></button></div>
+        <div><button class="demoButtons" id="matris2-1"></button></div>
+        <div><button class="demoButtons" id="matris2-2"></button></div>
     </div>
 
     <script src="/dist/human-human.js"></script>
