Come back to main

--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -21,7 +21,7 @@
     <div id="main">
         <div class="buttons-container">
     <div class="container">
-        <a href="/src/pages/human-human.html"> <button id="mode-1">FRIENDS</button></a>
+        <a href="/src/pages/human-human.html"> <button id="mode-1">FRIEND-FRIEND</button></a>
         
         <a href="/src/pages/human-machine.html"> <button id="mode-2">DARTHNESS</button> </a>
     
