--- a/index.html
+++ b/index.html
@@ -22,26 +22,29 @@
 <body>
 
     <header>
-        <h1>Tittle page</h1>
+        <h1>You vs Demo</h1>
     </header>
-    
-        <main>
 
-            <label for="html">Who you are</label><br>
+    <main>
 
-            <input id="character-name" placeholder="Character´s name" type="text">
-            <button onmouseover="playFuntion(mystical)" id="enjoy-button">Enjoy</button>
-            <audio id="mystical" src="/src/sounds/mystical.mp3"></audio>
+        <label for="html">Who you are?</label><br>
 
-        </main>
-        <section>
-
-            <h2> YOU DISCOVER YOUR POTENTIAL <br> WHILE FIGHTING THE UNKNOWN</h2>
-        </section>
+        <input id="character-name" placeholder="Character´s name" type="text">
+        <button onmouseover="play(mystical)" id="enjoy-button">Enjoy</button>
 
 
 
-        <!-- SCRIPT TS -->
-        <script src="./dist/index.js"></script>
+        <audio id="mystical" src="/src/sounds/mystical.mp3"></audio>
+
+    </main>
+    <section>
+
+        <h2> <span>D</span>ISCOVER YOUR POTENTIAL <br> WHILE FIGHTING THE <span>UNKNOWN</span></h2>
+    </section>
+
+
+
+    <!-- SCRIPT TS -->
+    <script src="./dist/index.js"></script>
 
 </html>
