--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -13,19 +13,22 @@
         <!-- <h1>game machine vs machine</h1> -->
     </header>
 
+    <div class="usher">
 
-    <div class="div-container">
-        <!-- class="cellButton" -->
-        <div><button class="cellButton" id="matris0,0"></button></div>
-        <div><button class="cellButton" id="matris0,1"></button></div>
-        <div><button class="cellButton" id="matris0,2"></button></div>
-        <div><button class="cellButton" id="matris1,0"></button></div>
-        <div><button class="cellButton" id="matris1-1"></button></div>
-        <div><button class="cellButton" id="matris1-2"></button></div>
-        <div><button class="cellButton" id="matris2-0"></button></div>
-        <div><button class="cellButton" id="matris2-1"></button></div>
-        <div><button class="cellButton" id="matris2-2"></button></div>
+        <div class="div-container">
+            <!-- class="cellButton" -->
+            <div><button class="cellButton" id="matris0,0"></button></div>
+            <div><button class="cellButton" id="matris0,1"></button></div>
+            <div><button class="cellButton" id="matris0,2"></button></div>
+            <div><button class="cellButton" id="matris1,0"></button></div>
+            <div><button class="cellButton" id="matris1-1"></button></div>
+            <div><button class="cellButton" id="matris1-2"></button></div>
+            <div><button class="cellButton" id="matris2-0"></button></div>
+            <div><button class="cellButton" id="matris2-1"></button></div>
+            <div><button class="cellButton" id="matris2-2"></button></div>
+        </div>
     </div>
+
 
 
 
