--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Game</title>
     <!-- <link rel="stylesheet" href="/src/styles/index.css"> -->
 </head>
 
