--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GAME</title>
+    <title>GAME.</title>
     <link rel="stylesheet" href="/src/styles/index.css">
 </head>
 
