--- a/src/pages/human-human.html
+++ b/src/pages/human-human.html
@@ -4,44 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   
     <link rel="stylesheet" href="/src/styles/human-human.css">
+    <title>Document</title>
 </head>
 
 <body>
+    <header id="header">
+<h2>hola</h2>
+    </header>
 
-
-    <h1 id="demo">Demo</h1>
-
- 
     <div class="usher">
 
+        <div class="div-container">
 
-
-
-
-
-
-
-
-    <div class="game">
-        <!-- class="cellButton" -->
-        <div><button class="demoButtons" id="matris0,0"></button></div>
-        <div><button class="demoButtons" id="matris0,1"></button></div>
-        <div><button class="demoButtons" id="matris0,2"></button></div>
-        <div><button class="demoButtons" id="matris1,0"></button></div>
-        <div><button class="demoButtons" id="matris1-1"></button></div>
-        <div><button class="demoButtons" id="matris1-2"></button></div>
-        <div><button class="demoButtons" id="matris2-0"></button></div>
-        <div><button class="demoButtons" id="matris2-1"></button></div>
-        <div><button class="demoButtons" id="matris2-2"></button></div>
+            <div><button class="cellButton" id="matris0,0"></button></div>
+            <div><button class="cellButton" id="matris0,1"></button></div>
+            <div><button class="cellButton" id="matris0,2"></button></div>
+            <div><button class="cellButton" id="matris1,0"></button></div>
+            <div><button class="cellButton" id="matris1-1"></button></div>
+            <div><button class="cellButton" id="matris1-2"></button></div>
+            <div><button class="cellButton" id="matris2-0"></button></div>
+            <div><button class="cellButton" id="matris2-1"></button></div>
+            <div><button class="cellButton" id="matris2-2"></button></div>
+        </div>
     </div>
-</div>
-            
-</div>
+
+
 
     <script src="/dist/human-human.js"></script>
-
+   
 </body>
 
 </html>
