--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -4,19 +4,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/src/styles/human-machine.css">
+</head>
+
+<body>
+
+
+    <h1 id="demo">Demo</h1>
+
+
+    <div class="usher">
+
+
+
+
+
+
+
+
+        <div class="game">
+            <!-- class="cellButton" -->
+            <div><button class="demoButtons" id="matris0,0"></button></div>
+            <div><button class="demoButtons" id="matris0,1"></button></div>
+            <div><button class="demoButtons" id="matris0,2"></button></div>
+            <div><button class="demoButtons" id="matris1,0"></button></div>
+            <div><button class="demoButtons" id="matris1-1"></button></div>
+            <div><button class="demoButtons" id="matris1-2"></button></div>
+            <div><button class="demoButtons" id="matris2-0"></button></div>
+            <div><button class="demoButtons" id="matris2-1"></button></div>
+            <div><button class="demoButtons" id="matris2-2"></button></div>
+        </div>
+    </div>
+
+    </div>
+
+    <script src="/dist/human-machine.js"></script>
+
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/styles/human-machine.css">
     <title>Document</title>
 </head>
 
 <body>
     <header id="header">
-        <!-- <h1>game machine vs machine</h1> -->
+     
     </header>
 
     <div class="usher">
 
         <div class="div-container">
-            <!-- class="cellButton" -->
+            
             <div><button class="cellButton" id="matris0,0"></button></div>
             <div><button class="cellButton" id="matris0,1"></button></div>
             <div><button class="cellButton" id="matris0,2"></button></div>
@@ -35,4 +99,4 @@
     <script src="/dist/human-machine.js"></script>
 </body>
 
-</html>
+</html> -->
