--- a/src/pages/human-human.html
+++ b/src/pages/human-human.html
@@ -30,9 +30,11 @@
 <div class="reproductor-buttons">
     <div class="reproductor-border">
 
-        <button id="play-button">1</button>
+        <button   id="play-button">1</button>
         <button id="pause-button">2</button>
         <button id="next-button">3</button>
+
+        <audio id="pasar" ></audio>
         <!-- <audio src="/src/sounds/"></audio> -->
         
     </div>
@@ -72,7 +74,7 @@
         </div>
 
 
-
+       
 
     </div>
     <div class="third-section"></div>
