--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         <form action="" method="post">
             <label for="html">Who you are?</label><br>
             <input id="character-name" placeholder="Character´s name" type="text" required>
-            <button type="button" id="enjoy-button" onmouseover="play(mystical)" >Enjoy</button>
+            <button type="button" id="enjoy-button" >Enjoy</button>
         </form>   
 
 
-        <audio id="mystical" src="/src/sounds/mystical.mp3"></audio>
+        <audio id="mystical" ></audio>
+       
 
     </main>
     <section>
