--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    <!-- FUENTE STRANGER THINGS -->
+    <!-- STRANGER THINGS FONT -->
+    <link href="https://fonts.cdnfonts.com/css/stranger-things" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
