--- a/src/pages/game.html
+++ b/src/pages/game.html
@@ -21,9 +21,9 @@
     <div id="main">
         <div class="buttons-container">
             <div class="container">
-                <button ondblclick="redirectFuntion('./human-human.html')" id="mode-1">Competitive Mode.</button>
+                <button onclick="redirectFuntion('./human-human.html')" id="mode-1">Competitive Mode.</button>
 
-                <button ondblclick="redirectFuntion('./human-machine.html')" id="mode-2">Demo mode.</button>
+                <button onclick="redirectFuntion('./human-machine.html')" id="mode-2">Demo mode.</button>
 
 
             </div>
