--- a/src/pages/human-human.html
+++ b/src/pages/human-human.html
@@ -17,7 +17,10 @@
     <header>
         <div>
             <div>
-                <h2> PROGRESS BAR</h2>
+                <!-- <h2> PROGRESS BAR</h2> -->
+                <div class="w3-border">
+                    <div class="w3-grey" style="height:24px;width:20%"></div>
+                  </div>
 
             </div>
         </div>
@@ -41,7 +44,7 @@
                         </button>
 
                         <audio id="pasar"></audio>
-  
+
                     </div>
 
 
@@ -83,7 +86,29 @@
 
 
         </div>
-        <div class="third-section"></div>
+        <div class="third-section">
+          <div class="first-block">
+            <div>
+  <div  class="nombre"></div>
+                <div class="reset-button-container">
+                    
+                    <button id="reset-button">RESET BUTON</button>
+                </div>
+
+            </div>
+   
+          </div>
+          <div class="second-block">
+            <div>
+                <h3>primerboton</h3>
+                <div  class="exit-button-container">
+
+                    <button id="exit-button">EXIT</button>
+                </div>
+
+            </div>
+          </div>
+        </div>
     </main>
 
 
