--- a/src/pages/human-machine.html
+++ b/src/pages/human-machine.html
@@ -13,93 +13,125 @@
 
 <body>
 
+    <header>
+        <div>
+            <div>
+                <h1>First part</h1>
 
-    <h1 id="demo">Demo</h1>
+                <!-- <h2> PROGRESS BAR</h2> -->
+                <div class="w3-border">
+                    <div class="w3-grey" style="height:24px;width:20%"></div>
+                </div>
 
-
-    <div class="usher">
-
-
-
-
-
-
-
-
-        <div class="game">
-            <!-- class="cellButton" -->
-            <div><button class="demoButtons" id="matris0,0"></button></div>
-            <div><button class="demoButtons" id="matris0,1"></button></div>
-            <div><button class="demoButtons" id="matris0,2"></button></div>
-            <div><button class="demoButtons" id="matris1,0"></button></div>
-            <div><button class="demoButtons" id="matris1-1"></button></div>
-            <div><button class="demoButtons" id="matris1-2"></button></div>
-            <div><button class="demoButtons" id="matris2-0"></button></div>
-            <div><button class="demoButtons" id="matris2-1"></button></div>
-            <div><button class="demoButtons" id="matris2-2"></button></div>
+            </div>
         </div>
-    </div>
 
-    </div>
+    </header>
+
+
+
+    <main>
+        <!-- REPRODUCTOR DE MUSICA -->
+        <div class="first-section">
+
+            <h2>hoola</h2>
+
+            <div class="reproductor-container">
+                <div class="reproductor-buttons">
+                    <div class="reproductor-border">
+
+                        <button id="play-button">
+                            <img src="/src/img/play.svg" alt="">
+                        </button>
+                        <button id="next-button">
+                            <img src="/src/img/next.svg" alt="">
+                        </button>
+                        <button id="pause-button">
+                            <img src="/src/img/pause.svg" alt="">
+                        </button>
+
+                        <audio id="pasar"></audio>
+
+                    </div>
+
+
+                </div>
+                <div class="reproductor-body">
+
+                    <div class="reproductor-parlante">
+                        <div class="circulo">
+
+                        </div>
+
+                    </div>
+                    <div class="reprodutor-grabador">
+                        <div class="grabador">
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="second-section">
+
+            <div class="usher">
+
+
+
+
+
+                <div class="game">
+                    <!-- class="cellButton" -->
+                    <div><button class="demoButtons" id="matris0,0"></button></div>
+                    <div><button class="demoButtons" id="matris0,1"></button></div>
+                    <div><button class="demoButtons" id="matris0,2"></button></div>
+                    <div><button class="demoButtons" id="matris1,0"></button></div>
+                    <div><button class="demoButtons" id="matris1-1"></button></div>
+                    <div><button class="demoButtons" id="matris1-2"></button></div>
+                    <div><button class="demoButtons" id="matris2-0"></button></div>
+                    <div><button class="demoButtons" id="matris2-1"></button></div>
+                    <div><button class="demoButtons" id="matris2-2"></button></div>
+                </div>
+            </div>
+        </div>
+
+
+        </div>
+        <div class="third-section">
+            <div class="first-block">
+                <div>
+                  <div class="nombre">
+
+                  </div>
+                    <div class="reset-button-container">
+
+                        <button id="reset-button">RESET BUTON</button>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="second-block">
+                <div>
+                    <h3>primerboton</h3>
+                    <div class="exit-button-container">
+
+                        <button id="exit-button">EXIT</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </main>
+
+
+
+
 
     <script src="/dist/human-machine.js"></script>
 
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- 
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/human-machine.css">
-    <title>Document</title>
-</head>
-
-<body>
-    <header id="header">
-     
-    </header>
-
-    <div class="usher">
-
-        <div class="div-container">
-            
-            <div><button class="cellButton" id="matris0,0"></button></div>
-            <div><button class="cellButton" id="matris0,1"></button></div>
-            <div><button class="cellButton" id="matris0,2"></button></div>
-            <div><button class="cellButton" id="matris1,0"></button></div>
-            <div><button class="cellButton" id="matris1-1"></button></div>
-            <div><button class="cellButton" id="matris1-2"></button></div>
-            <div><button class="cellButton" id="matris2-0"></button></div>
-            <div><button class="cellButton" id="matris2-1"></button></div>
-            <div><button class="cellButton" id="matris2-2"></button></div>
-        </div>
-    </div>
-
-
-
-
-    <script src="/dist/human-machine.js"></script>
-</body>
-
-</html> -->
